WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158613
REGRESSION(
r201880
): WebSockets based remote inspector is broken since
r201880
https://bugs.webkit.org/show_bug.cgi?id=158613
Summary
REGRESSION(r201880): WebSockets based remote inspector is broken since r201880
Carlos Garcia Campos
Reported
2016-06-09 22:59:18 PDT
It times out running the first test case, so my guess is that remote inspector is not working, probably due to web sockets being broken after
r201880
. I haven't looked at it in detail, though. TEST: ./Tools/gtk/../../WebKitBuild/Release/bin/TestWebKitAPI/WebKit2Gtk/TestInspectorServer: TIMEOUT
Attachments
Patch
(6.69 KB, patch)
2016-06-22 07:53 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-06-22 07:48:29 PDT
Not really GTK+ specific.
Carlos Garcia Campos
Comment 2
2016-06-22 07:53:09 PDT
Created
attachment 281838
[details]
Patch
Michael Catanzaro
Comment 3
2016-06-22 09:25:10 PDT
Comment on
attachment 281838
[details]
Patch Looks straightforward. It needs an owner to rubber stamp before you commit. Darin?
Carlos Garcia Campos
Comment 4
2016-06-22 23:07:38 PDT
(In reply to
comment #3
)
> Comment on
attachment 281838
[details]
> Patch > > Looks straightforward. It needs an owner to rubber stamp before you commit. > Darin?
This is not exactly cross-platform code, it's only used by GTK+ and EFL, that's why it has been broken for so long and nobody noticed it.
Carlos Garcia Campos
Comment 5
2016-06-22 23:11:09 PDT
Committed
r202367
: <
http://trac.webkit.org/changeset/202367
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug